--- a/app/scheduler/sb-drafts/sb-drafts.html
+++ b/app/scheduler/sb-drafts/sb-drafts.html
@@ -7,7 +7,12 @@
                 <span flex></span>
                 <input class="fade-in search-input-box" ng-show="showDraftTools || vm.q" type="search"
                        ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Drafts..."/>
-                <md-button aria-label="Create A Schedule" style="font-size: 16px;" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"
+                <md-button aria-label="Save All Changes" style="font-size: 16px;" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"
+                           ng-click="vm.saveAllDirtyDrafts()">
+                    <span class="fa fa-check"></span>
+                    <md-tooltip>Save All Changes</md-tooltip>
+                </md-button>
+                <md-button aria-label="Create A Schedule" style="font-size: 16px; margin-left: 4px" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"
                            ng-click="vm.addDraftSchedule()">
                     <span class="fa fa-plus"></span>
                     <md-tooltip>Create A Draft Schedule</md-tooltip>
@@ -78,8 +83,7 @@
                            class="schedule-item-input schedule-item-date-input" ng-class="{'invalid-date-error': item.hasInvalidInput}"
                            ng-click="vm.openDatePicker(item, $event);" ng-model="item.desired_start_time" placeholder=""/>
                     <span style="min-width: 50px; transition: 0s;" ng-show="!item.isDirty"></span>
-                    <md-button title="Save the draft, if the button is disabled enter a valid desired start date."
-                               data-ng-disabled="!vm.validateInputDate(item)" ng-show="item.isDirty" style="transition: 0s;" aria-label="Save Draft" class="sb-row-button"
+                    <md-button title="Save the draft" ng-show="item.isDirty" style="transition: 0s;" aria-label="Save Draft" class="sb-row-button"
                                ng-click="vm.saveDraft(item); $event.stopPropagation();">
                         <span class="fa fa-check md-fab-fa-icon-small"></span>
                         <!--<md-tooltip>-->
