--- a/app/scheduler/scheduler-home.html
+++ b/app/scheduler/scheduler-home.html
@@ -20,9 +20,17 @@
         </div>
         <div layout="row" layout-align="center center">
 
+            <md-button class="scheduler-nav-home-item md-primary md-raised" flex ng-click="vm.stateGo('scheduler.observations')">
+                <div layout="column">
+                    <div flex style="font-size: 148px" ><span flex class="fa fa-binoculars"></span></div>
+                    <!--<div ng-include="'images/scheduleblocks.svg'" onload="vm.svgLoaded('#subarrays-img-target-color')"></div>-->
+                    <span>Observation Schedules Overview</span></div>
+            </md-button>
+
             <md-button class="scheduler-nav-home-item md-primary md-raised" flex ng-click="vm.stateGo('scheduler.execute')">
                 <div layout="column">
-                    <div ng-include="'images/scheduleblocks.svg'" onload="vm.svgLoaded('#subarrays-img-target-color')"></div>
+                    <div flex style="font-size: 148px" ><span flex class="fa fa-tasks"></span></div>
+                    <!--<div ng-include="'images/scheduleblocks.svg'" onload="vm.svgLoaded('#subarrays-img-target-color')"></div>-->
                     <span>Manage Schedule Blocks</span></div>
             </md-button>
         </div>
